<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baseball_in_the_grass_1557579"
    >

    <Button
        android:id="@+id/new_season_go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_button_grey"
        android:padding="8dp"
        android:text="@string/go"
        android:textColor="@color/colorIcons"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/new_game_title_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_season_textview"
        app:layout_constraintVertical_bias="0.134" />

    <Button
        android:id="@+id/new_game_go_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/round_button_grey"
        android:padding="8dp"
        android:text="@string/go"
        android:textColor="@color/colorIcons"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/new_game_go_button_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/new_game_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/text_background_color"
        android:fontFamily="@font/faster_one"
        android:text="@string/new_game"
        android:textAlignment="center"
        android:textColor="@color/colorIcons"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_game_title_guideline" />

    <TextView
        android:id="@+id/new_season_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#b2949494"
        android:fontFamily="@font/faster_one"
        android:paddingBottom="10dp"
        android:text="@string/new_nseason"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/new_season_top_guideline" />

    <Spinner
        android:id="@+id/new_game_season_selector_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:popupBackground="@drawable/round_button_grey"
        android:background="@drawable/round_button_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_game_spinner_guideline" />


    <android.support.constraint.Guideline
        android:id="@+id/new_game_title_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/new_game_spinner_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <android.support.constraint.Guideline
        android:id="@+id/new_game_go_button_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <android.support.constraint.Guideline
        android:id="@+id/new_season_top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.14" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="0dp"
        android:background="@drawable/round_button_grey"
        android:text="@string/back"
        android:textColor="@color/colorIcons"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>